# GTR-Task2

./: Nodes02.py  README.md  docker-compose.yml  graph.py  langgraph.json  main.py  pyproject.toml
API/: main.py
BackEnd/API/: .dockerignore  Dockerfile  __init__.py  config.py  env.example  langgraph.json  main.py  requirements.txt  tests.txt
BackEnd/API/agent/: graph.py  nodes.py  prompts.py  state.py
BackEnd/API/db/: __init__.py  connection.py  models.py
BackEnd/API/schemas/: __init__.py  device.py
BackEnd/API/tools/: __init__.py  device.py  main.py  sql_validator.py
